Armageddon_Lab_1c - Bonus_A/03b-nat.tf
############################################
# NAT Gateway (optional)
############################################

resource "aws_eip" "nat" {
  count  = var.enable_nat ? 1 : 0
  domain = "vpc"

  tags = {
    Name = "nat-eip"
  }
}

resource "aws_nat_gateway" "nat" {
  count         = var.enable_nat ? 1 : 0
  allocation_id = aws_eip.nat[0].id
  subnet_id     = aws_subnet.public[0].id

  depends_on = [aws_internet_gateway.ultram_igw]

  tags = {
    Name = "nat-gateway"
  }
}

resource "aws_route" "private_nat" {
  count                  = var.enable_nat ? 1 : 0
  route_table_id         = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat[0].id
}


# ############################################
# # NAT Gateway for private subnet outbound
# ############################################

# # Elastic IP for NAT Gateway
# resource "aws_eip" "nat" {
#   domain = "vpc"

#   tags = {
#     Name = "nat-eip"
#   }
# }

# # NAT Gateway placed in FIRST public subnet
# resource "aws_nat_gateway" "nat" {
#   allocation_id = aws_eip.nat.id
#   subnet_id     = aws_subnet.public[0].id

#   depends_on = [aws_internet_gateway.ultram_igw]

#   tags = {
#     Name = "nat-gateway"
#   }
# }

# ############################################
# # Route private subnets to NAT
# ############################################

# resource "aws_route" "private_nat" {
#   route_table_id         = aws_route_table.private.id
#   destination_cidr_block = "0.0.0.0/0"
#   nat_gateway_id         = aws_nat_gateway.nat.id
# }
